samples/_failures_safe/1761303924_47724e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_1b7a7761.c:186:1: error: expected identifier or ‘(’ at end of input
  186 | void
      | ^~~~
